// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Block Edit a block 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-paragraph"
  >
    <div
      class="editable-block"
    >
      <div
        class="edit-block-line"
      >
        <h3
          class="lck-color-title"
        >
          Titre
        </h3>
         
        <span
          class="p-buttonset"
        >
          <button
            class="p-button-lg p-button-text handle-block p-button p-component p-button-icon-only"
            title="Drag the block"
            type="button"
          >
            <span
              class="pi pi-ellipsis-v p-button-icon"
            />
             
            <span
              class="p-button-label"
            >
               
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <button
            class="p-button-lg p-button-text edit-block-button p-button p-component p-button-icon-only"
            title="Edit the block"
            type="button"
          >
            <span
              class="pi pi-pencil p-button-icon"
            />
             
            <span
              class="p-button-label"
            >
               
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <button
            class="p-button-lg p-button-text remove-block-button p-button p-component p-button-icon-only"
            title="Delete the block"
            type="button"
          >
            <span
              class="pi pi-trash p-button-icon"
            />
             
            <span
              class="p-button-label"
            >
               
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
        </span>
      </div>
       
      <div
        class="lck-color-content block-content"
        title="Titre"
        type="Paragraph"
      >
        
  Je suis un texte.

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block Markdown 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-markdown"
  >
    <div
      class=""
    >
      <h3
        class="lck-color-title"
      >
        Futur Markdown
      </h3>
       
      <div
        class="block-content"
        title="Futur Markdown"
        type="Markdown"
      >
        <p>
          This is the content.
        </p>
        

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block Paragraph (Text) 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-paragraph"
  >
    <div
      class=""
    >
      <h3
        class="lck-color-title"
      >
        Titre
      </h3>
       
      <div
        class="lck-color-content block-content"
        title="Titre"
        type="Paragraph"
      >
        
  Je suis un texte.

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block TableView 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-table-view"
  >
    <div
      class=""
    >
      <h3
        class="lck-color-title"
      >
        My TableView's block
      </h3>
       
      <div
        class="block-content"
        id="1"
        type="TableView"
      >
        <div
          class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
        >
          <div
            class="p-d-flex p-flex-wrap"
          >
            <div
              class="lck-overlay-panel"
            >
              <button
                class="p-button p-component p-button-outlined p-button-secondary"
                type="button"
              >
                <span
                  class="pi pi-filter p-button-icon p-button-icon-left"
                />
                 
                <span
                  class="p-button-label"
                >
                  no filter
                </span>
                 
                <!---->
                <span
                  class="p-ink"
                />
              </button>
               
              <!---->
            </div>
          </div>
           
          <div
            class="p-d-flex p-flex-wrap"
          >
            <!---->
             
            <!---->
          </div>
        </div>
         
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-block-default"
  >
    <span
      class="lck-color-content"
    >
      
    The block type does not exist.
  
    </span>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block unknown type 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-block-default"
  >
    <div
      class=""
    >
      <h3
        class="lck-color-title"
      >
        Not Known
      </h3>
       
      <span
        class="lck-color-content"
      >
        
      This NotKnown block type does not exist.
    
      </span>
    </div>
  </div>
</div>
`;
